--- a/resources/style.css
+++ b/resources/style.css
@@ -20,3 +20,22 @@ label {
 input[type="checkbox"]:checked + label {
     text-decoration: line-through;
 }
+
+ul#summary {
+    list-style-type: none;
+    background-color: #f0f0f0;
+    padding: 10px;
+}
+
+ul#summary li {
+    margin-bottom: 5px;
+}
+
+ul#summary a {
+    text-decoration: none;
+    color: #333;
+}
+
+ul#summary a:hover {
+    text-decoration: underline;
+}
