--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,13 @@ button {
 img{
     max-width: 50%;
 }
+
+tr{
+    border-bottom-width: 0.1rem;
+    border-color: #9ca3af;
+    border-style: dashed;
+}
+
+td{
+    padding-left: 1rem;
+}
